Warning fixes.